transaction type remark

--- a/nulstar/交易类型字典.md
+++ b/nulstar/交易类型字典.md
@@ -1,9 +1,11 @@
 
 ## 交易类型字典
+> 采用模块化方式后,不在限定开发语言,不管你是使用java、c++、js、golang等,
+> 网络传输交易类型使用整型数值,交易字典变量名尽可能按照如下表格来定义,方便快速搜索和代码阅读。
 
 ### 公共交易类型
 
-|交易类型 | 交易类型            |说明            |
+|交易类型 | 交易变量名            |说明            |
 |---- |----------------------|---------------|
 |1    |TX_TYPE_COINBASE      |Coinbase,共识奖励交易 |
 |2    |TX_TYPE_TRANSFER      |转账交易|
@@ -11,7 +13,7 @@
 
 ### 共识模块
 
-|交易类型 | 交易类型            |说明            |
+|交易类型 | 交易变量名            |说明            |
 |---- |----------------------|---------------|
 |4    |TX_TYPE_REGISTER_AGENT|创建共识节点交易|
 |5    |TX_TYPE_JOIN_CONSENSUS|委托交易|
@@ -23,7 +25,7 @@
 
 ### 链管理模块
 
-|交易类型 | 交易类型            |说明            |
+|交易类型 | 交易变量名            |说明            |
 |---- |-------------------------------- |---------------|
 |5001 |TX_TYPE_REGISTER_CHAIN_AND_ASSET |注册链交易|
 |5002 |TX_TYPE_DESTROY_ASSET_AND_CHAIN  |链注销交易|
@@ -32,7 +34,7 @@
 
 ### 智能合约
 
-|交易类型 | 交易类型               |说明            |
+|交易类型 | 交易变量名               |说明            |
 |---- |------------------------ |---------------|
 |100  |TX_TYPE_CREATE_CONTRACT  |创建智能合约交易|
 |101  |TX_TYPE_CALL_CONTRACT    |调用智能合约交易|
