--- a/nulstar/交易类型字典.md
+++ b/nulstar/交易类型字典.md
@@ -21,7 +21,7 @@
 |7    |TX_TYPE_YELLOW_PUNISH |黄牌警告交易|
 |8    |TX_TYPE_RED_PUNISH    |红牌警告交易|
 |9    |TX_TYPE_STOP_AGENT    |注销共识节点交易|
-|10   |TX_TYPE_CROSS_CHAIN   |跨链交易 |
+|10   |TX_TYPE_CROSS_CHAIN_TRANSFER   |跨链转账交易 |
 
 ### 链管理模块
 
